fixed margin issue with contact section on mobile

--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -89,3 +89,8 @@ hr {
 .contact {
   margin: 0;
 }
+
+.contactDetails {
+  margin-left: 10px;
+  margin-right: 10px;
+}
